// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchHelpers doSearch should make the right query 1`] = `
Array [
  Object {
    "data": "yay",
  },
]
`;

exports[`searchHelpers doSearch should make the right query 2`] = `
Array [
  Array [
    Object {
      "order": Object {
        "birthtime": "ASC",
      },
      "where": Object {
        "dir": "album",
        "source": "source",
      },
    },
  ],
]
`;

exports[`searchHelpers doSearchWithCache with not-saved results should return the results 1`] = `
Array [
  Object {
    "id": 123,
    "order": 0,
    "photo": Object {
      "dir": "dir",
      "file": "file",
      "id": 123,
      "source": "source",
    },
    "search": Object {
      "id": 123,
    },
  },
  Object {
    "id": 456,
    "order": 1,
    "photo": Object {
      "dir": "dir",
      "file": "file",
      "id": 456,
      "source": "source",
    },
    "search": Object {
      "id": 123,
    },
  },
]
`;

exports[`searchHelpers doSearchWithCache with not-saved results should return the results with the pagination 1`] = `
Array [
  Object {
    "id": 123,
    "order": 0,
    "photo": Object {
      "dir": "dir",
      "file": "file",
      "id": 123,
      "source": "source",
    },
    "search": Object {
      "id": 123,
    },
  },
]
`;

exports[`searchHelpers doSearchWithCache with not-saved results should return the results with the pagination 2`] = `
Array [
  Object {
    "id": 456,
    "order": 1,
    "photo": Object {
      "dir": "dir",
      "file": "file",
      "id": 456,
      "source": "source",
    },
    "search": Object {
      "id": 123,
    },
  },
]
`;

exports[`searchHelpers doSearchWithCache with saved results should return photo according to the pagination 1`] = `
Array [
  undefined,
  Object {
    "album": "album",
    "filterBy": "",
    "id": 123,
    "orderBy": "orderBy",
    "searchResults": Array [],
    "source": "source",
  },
  5,
  10,
]
`;

exports[`searchHelpers doSearchWithCache with saved results should return the saved photos 1`] = `
Array [
  Object {
    "id": 123,
    "order": 0,
    "photo": Object {
      "dir": "dir",
      "file": "file",
      "id": 123,
      "source": "source",
    },
    "search": Object {
      "id": 123,
    },
  },
]
`;

exports[`searchHelpers fetchSearchResult should make the right query 1`] = `
Array [
  Object {
    "data": "yay",
  },
]
`;

exports[`searchHelpers fetchSearchResult should make the right query 2`] = `
Array [
  Array [
    Object {
      "order": Object {
        "order": "ASC",
      },
      "relations": Array [
        "photo",
      ],
      "where": Object {
        "order": FindOperator {
          "_getSql": undefined,
          "_multipleParameters": true,
          "_objectLiteralParameters": undefined,
          "_type": "between",
          "_useParameter": true,
          "_value": Array [
            1,
            6,
          ],
        },
        "search": Object {
          "album": "album",
          "filterBy": "",
          "id": 890,
          "orderBy": "orderBy",
          "searchResults": Array [],
          "source": "source",
        },
      },
    },
  ],
]
`;

exports[`searchHelpers findSavedSearch should make the right query 1`] = `
Object {
  "data": "yay",
}
`;

exports[`searchHelpers findSavedSearch should make the right query 2`] = `
Array [
  Array [
    Object {
      "where": Object {
        "album": "album",
        "filterBy": null,
        "orderBy": "DATE_ASC",
        "source": "source",
      },
    },
  ],
]
`;

exports[`searchHelpers saveNewSearch should make the right query 1`] = `
Object {
  "data": "yay",
}
`;

exports[`searchHelpers saveNewSearch should make the right query 2`] = `
Array [
  Array [
    Search {
      "album": "album",
      "filterBy": undefined,
      "id": undefined,
      "orderBy": "DATE_ASC",
      "searchResults": undefined,
      "source": "source",
    },
  ],
]
`;

exports[`searchHelpers saveSearchResult should make the right query 1`] = `
Array [
  Array [
    Object {
      "data": "yay",
    },
  ],
  Array [
    Object {
      "data": "yay",
    },
  ],
]
`;

exports[`searchHelpers saveSearchResult should make the right query 2`] = `
Array [
  Array [
    SearchResult {
      "id": undefined,
      "order": 0,
      "photo": Object {
        "id": 123,
      },
      "photoId": undefined,
      "search": Object {
        "id": 890,
      },
      "searchId": undefined,
    },
  ],
  Array [
    SearchResult {
      "id": undefined,
      "order": 1,
      "photo": Object {
        "id": 456,
      },
      "photoId": undefined,
      "search": Object {
        "id": 890,
      },
      "searchId": undefined,
    },
  ],
]
`;
